tests/fixtures/valid/terminal_app.desktop
[Desktop Entry]
Type=Application
Name=Terminal Application
Exec=my-terminal-app
Terminal=true
Icon=utilities-terminal
Categories=System;TerminalEmulator;
Comment=A terminal-based application
