tests/fixtures/invalid/invalid_group_header.desktop
[Desktop Entry]
Type=Application
Name=Invalid Group Header
Exec=test-app

[Invalid Group Header Without Closing Bracket
Key=Value
